# clawvis

./: .env.example  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GOAL.md  LICENSE  Makefile  README.md  clawvis  docker-compose.clawvis-brain.yml  docker-compose.yml  get.sh  install.sh  package-lock.json  pyproject.toml
.githooks/: commit-msg
core-tools/kanban/: TASK_MODEL.md  pyproject.toml
core-tools/kanban/kanban_api/: __main__.py  api.py  core.py  models.py  sse.py
core-tools/kanban/tests/: test_confidence.py  test_sse.py  test_weekly_stats.py
hub-core/: .env.example  README.md  pyproject.toml  test_orchestration.py  transcribe-audio.sh
hub-core/hub_core/: __init__.py  __main__.py  api_fallback.py  brain_memory.py  central_logger.py  chat_runtime.py  config.py  dombot_log.py  git_sync.py  main.py  memory_api.py  models.py  notion_client.py  openclaw_audio_config.py  setup_runtime.py  setup_sync.py
hub-core/hub_core/agents/: __init__.py  base.py  mammouth.py  openclaw.py  registry.py
hub-core/hub_core/compat/: __init__.py
hub-core/hub_core/fetch/: __init__.py  mammouth_ai_usage.py  moment_before.py  provider_data.py
hub-core/hub_core/mammouth/: __init__.py  client.py
hub-core/hub_core/orchestration/: README.md  __init__.py  agent_router.py  example_integration.py  style_guide.py
hub-core/hub_core/security/: __init__.py  identity.py  network.py  rbac.py
hub-core/hub_core/services/: __init__.py  manager.py
hub-core/hub_core/templates/: LocalBrain.md  MEMORY.openclaw.md
hub-core/hub_core/track/: __init__.py  session.py  system.py  tokens.py  water.py
hub-core/hub_core/transcribe/: __init__.py  transcriber.py
hub-core/hub_core/update/: __init__.py  status.py  system_metrics.py
hub-core/tests/: test_brain_memory.py  test_central_logger.py  test_chat_runtime.py  test_dynamic_models.py  test_fetch_provider_data.py  test_hub_integration.py  test_integration.py  test_main.py  test_memory_api.py  test_models.py  test_notion_client.py  test_openclaw_audio_config.py  test_real_providers.py  test_services_manager.py  test_setup_sync.py  test_system_metrics.py  test_transcriber.py  test_transcriber_real_audio.py  test_update_status.py
kanban/: Dockerfile  README.md  pyproject.toml
kanban/kanban_api/: api.py  chat_api.py  core.py  logs_api.py  models.py  server.py  setup_api.py  sse.py  weekly_stats.py
kanban/tests/: test_confidence.py  test_hub_settings_linked_env.py  test_memory_major.py  test_projects_api.py  test_setup_api.py  test_sse.py  test_task_delete.py
services/agent/: Dockerfile  docker-entrypoint.sh  pyproject.toml
services/agent/agent_service/: cli_runner.py  config_store.py  kanban_client.py  llm_sync.py  main.py  orchestrate.py  persona.py  provider.py  router.py  streaming.py
services/agent/tests/: conftest.py  test_cli_runner.py  test_persona.py  test_provider.py  test_router.py
services/telegram/: Dockerfile  bot.py  pyproject.toml  requirements.txt
services/telegram/core/: __init__.py  bot.py  bridge.py  config.py  formatter.py  memory.py  models.py  router.py
services/telegram/tests/: test_telegram.py
skills/brain-maintenance/core/: README.md  pyproject.toml
skills/brain-maintenance/core/brain_maintenance/: __init__.py  __main__.py  clawvis_paths.py  logging.py  recalibrate.py  recover.py  trim.py
skills/brain-maintenance/core/tests/: test_maintenance.py
skills/dombot-mail/core/: README.md  pyproject.toml
skills/dombot-mail/core/dombot_mail/: __init__.py  cli.py  config.py  models.py  service.py
skills/dombot-mail/core/tests/: test_config.py
skills/implement/core/: pyproject.toml
skills/implement/core/implement/: __init__.py  __main__.py  api.py  clawvis_paths.py  config.py  selector.py  status.py
skills/implement/core/tests/: test_selector.py  test_status.py
skills/kanban-implementer/core/: pyproject.toml
skills/kanban-implementer/core/kanban_implementer/: __init__.py  __main__.py  clawvis_paths.py  cli.py  config.py  selector.py  status.py
skills/kanban-implementer/core/tests/: test_selector.py  test_status.py
skills/knowledge-consolidator/core/: README.md  pylint-report.txt  pyproject.toml
skills/knowledge-consolidator/core/knowledge_consolidator/: __init__.py  __main__.py  curiosity.py  logging.py
skills/knowledge-consolidator/core/tests/: test_consolidator.py
skills/logger/core/: .env.example  .gitignore  pyproject.toml
skills/logger/core/dombot_logger/: __init__.py  config.py  discord_cli.py  discord_router.py  logger.py  models.py
skills/logger/core/example/: test_discord_integration.py
skills/logger/core/tests/: test_config.py  test_discord_router.py  test_logger.py  test_models.py
skills/morning-briefing/core/: pyproject.toml
skills/morning-briefing/core/briefing/: __init__.py  __main__.py  main.py  wikipedia_on_this_day.py
skills/morning-briefing/core/tests/: test_briefing.py
skills/proactive-innovation/core/: .env.example  README.md  pylint-report.txt  pyproject.toml
skills/proactive-innovation/core/proactive_innovation/: __init__.py  __main__.py  clawvis_paths.py  config.py  ideas.py  llm.py  logging.py  projects.py
skills/project-init/templates/python-fastapi/{{cookiecutter.project_slug}}/: pyproject.toml
skills/project-init/templates/python-fastapi/{{cookiecutter.project_slug}}/app/: main.py
skills/project-init/templates/python-fastapi/{{cookiecutter.project_slug}}/docs/: conf.py  index.rst
skills/project-init/templates/python-fastapi/{{cookiecutter.project_slug}}/tests/: test_health.py
skills/reverse-prompt/: .env.example  EXAMPLES.md  README.md  SKILL.md  config.json  pyproject.toml  test_example.sh
skills/reverse-prompt/core/reverse_prompt/: __init__.py  engine.py
skills/reverse-prompt/scripts/: run.sh
skills/self-improvement/core/: .env.example  README.md  pyproject.toml
skills/self-improvement/core/self_improvment/: __init__.py  __main__.py  config.py  learnings.py  llm.py  logging.py  protocol_audit.py  telegram.py
skills/self-improvement/core/tests/: test_config.py  test_protocol_audit.py
(+333 files in other folders)
