# UV workspace root: keep only coupled Python packages here.
# hub-core <-> services/kanban are linked (Memory API imports kanban_api).
# services/agent, services/scheduler, and services/telegram run with isolated venvs.
[project]
name = "clawvis-workspace"
version = "0.0.0"
description = "Workspace for coupled Clawvis Python packages (hub-core + kanban-api)"
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = ["hub-core", "services/kanban"]

[tool.uv.sources]
dombot-hub-core = { workspace = true }
kanban-api = { workspace = true }
