# UV workspace root for shared package resolution.
[project]
name = "clawvis-workspace"
version = "0.0.0"
description = "Workspace for Clawvis Python services and shared packages"
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = ["hub-core", "services/kanban", "services/agent", "services/telegram", "services/scheduler"]

[tool.uv.sources]
hub-core = { workspace = true }
kanban-api = { workspace = true }
