[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kanban-api"
version = "0.1.0"
description = "Kanban & Logs API (FastAPI)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pytest-asyncio>=1.3.0",
    "uvicorn[standard]>=0.22",
]

[project.scripts]
kanban-api = "kanban_api.__main__:main"

[project.optional-dependencies]
test = ["pytest>=8", "httpx>=0.27"]

[tool.hatch.build.targets.wheel]
packages = ["kanban_api"]

[dependency-groups]
dev = [
    "pylint>=4.0.5",
    "ruff>=0.15.7",
]
