[project]
name = "clawvis-telegram"
version = "0.1.0"
description = "Telegram bridge for Clawvis"
requires-python = ">=3.11"
dependencies = [
  "hub-core",
  "aiohttp==3.10.10",
  "httpx>=0.28",
  "loguru==0.7.2",
  "pydantic>=2.12.5",
  "python-telegram-bot==21.6",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.uv.sources]
hub-core = { workspace = true }
