[project]
name = "brain-maintenance"
version = "0.1.0"
description = "L1/L2/L3 brain maintenance: trim, recalibrate, recover"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_maintenance"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pylint>=3.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true

[tool.pylint.main]
max-line-length = 100

[tool.pylint.messages_control]
disable = ["C0114", "C0115", "C0116"]
