[project]
name = "dombot-mail"
version = "0.1.0"
description = "DomBot mail skill via IMAP/SMTP (Infomaniak)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "loguru>=0.7",
    "python-dotenv>=1.0",
    "typer>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pylint>=3.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
disallow_untyped_defs = false

[tool.pylint.main]
max-line-length = 100

[tool.pylint.messages_control]
disable = [
    "C0114", "C0115", "C0116", "C0301", "R0913", "R0917", "R0914", "R0912",
    "W0718", "W0613", "W0622", "E0602",
]

[tool.hatch.build.targets.wheel]
packages = ["dombot_mail"]

[project.scripts]
dombot-mail = "dombot_mail.cli:main"

