[project]
name = "implement"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.scripts]
kanban-select = "implement.__main__:main"
kanban-update = "implement.status:_cli_update"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]
