[project]
name = "proactive-innovation"
version = "0.1.0"
description = "Proactive innovation scan: projects, improvements, ideas (single report, no message loop)"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["proactive_innovation"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.8.0",
    "pylint>=3.3.0",
]

[tool.pylint.main]
max-line-length = 100

[tool.pylint.messages_control]
disable = ["C0114", "C0115", "C0116", "C0301", "C0415", "R0913", "R0917", "R0914", "R0912", "R0915", "W0718", "W0622", "W1510"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]
